# SugarPi

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Config.mk  DisplayPi.cpp  DisplayPi.h  KeyboardPi.cpp  KeyboardPi.h  Makefile  README.md  Rules.mk  ScreenMenu.cpp  ScreenMenu.h  SetupJTAG.txt  SoundPi.cpp  SoundPi.h  all  build_all.sh  build_circle.sh  build_cmake.sh  build_pi1.sh  build_pi2.sh  build_pi3.sh  build_pi3_win.sh  build_pi4.sh  build_pi4_32bits.sh  build_qemu.sh  circle.cmake  config  config_win32  cross.cmake  emulation.cpp  emulation.h  gamecontrollerdb.txt  init_rpi  kernel.cpp  kernel.h  (+11 more)
.github/workflows/: c-cpp.yml
CART/: Burnin Rubber (UK) (1990) [Original] [CARTOUCHE].cpr  crtc3_projo.cpr
CMake/: CMakeListsUserConfig64.txt  CMakeListsUserConfig64_sample.txt  circle.cmake  cross64.cmake
CMake/libcircle/: CMakeLists.txt
SugarPiWin32/: CLogger.cpp  CLogger.h  CMakeLists.txt  ConfigurationManagerDesktop.cpp  ConfigurationManagerDesktop.h  DisplayPiDesktop.cpp  DisplayPiDesktop.h  KeyboardHardwareImplemetationWin.cpp  KeyboardHardwareImplemetationWin.h  KeyboardPiDesktop.cpp  KeyboardPiDesktop.h  SoundPiDesktop.cpp  SoundPiDesktop.h  SugarPiSetupDesktop.cpp  SugarPiSetupDesktop.h  emulation.cpp  emulation.h  main.cpp
res/: 101_keyboard  101_keyboard_win  Credits.txt  PressStart2P.c  PressStart2P.fnt  PressStart2P.h  SugarboxLogo.cpp  SugarboxLogo.h  button_1.h  coolspot.cpp  coolspot.h  coolspot_alpha.c  font.fnt  font_0.tga  ka1bronze.h  labels.ini  lemblue.c  logo.c  magneto.fnt  mario3.h
src/: BackFrame.cpp  BackFrame.h  BasicFrame.cpp  BasicFrame.h  Bitmap.cpp  Bitmap.h  BitmapWindows.cpp  BitmapWindows.h  Button.cpp  Button.h  CMakeLists.txt  CString.cpp  CString.h  CheckMenuItemWindows.cpp  CheckMenuItemWindows.h  ConfigurationManager.cpp  ConfigurationManager.h  DisplayPi.cpp  DisplayPi.h  DisplayPiImp.cpp  DisplayPiImp.h  EmulationFrame.cpp  EmulationFrame.h  Engine.cpp  Engine.h  KeyboardDefine.h  KeyboardHardwareImplemetation.h  KeyboardHardwareImplemetationPi.cpp  KeyboardHardwareImplemetationPi.h  KeyboardPi.cpp  KeyboardPi.h  MainMenuWindows.cpp  MainMenuWindows.h  MenuButtonWindows.cpp  MenuButtonWindows.h  MenuButtonWithBitmapWindows.cpp  MenuButtonWithBitmapWindows.h  MenuFrame.cpp  MenuFrame.h  MenuItemWindows.cpp  (+36 more)
src/HVS/: Readme.md
src/vc4/interface/bcm_host/: bcm_host.c
src/vc4/interface/vmcs_host/: Makefile  vc_tvservice.h  vc_vchi_tvservice.c
src/vc4/vchi/common/: endian.h
sugarpi-action/: Dockerfile  action.yml  entrypoint_docker.sh
tools/: CMakeLists.txt  GenerateFont.cpp  Img2bin.cpp
tools/ConfigKeyboard/: CMakeLists.txt  ConfigKeyboard.cpp
tools/ConfigKeyboard/res/: ConfigKeyboard.rc  resource.h
